css fix about top border getting cut off when not logged in

--- a/src/app/datasets/dashboard/dashboard.component.scss
+++ b/src/app/datasets/dashboard/dashboard.component.scss
@@ -8,7 +8,6 @@
   width: 100%;
   box-sizing: border-box;
   padding: 0;
-  margin-bottom: -0.5rem;
   gap: 0;
 }
 
